css/styles.css
/* Colors for reference
#baf580;
#fafafa;
#444;
*/

/*
### GENERAL STYLES ###
*/
body {
  font-family: 'Ubuntu', "Helvetica Neue", Helvetica, sans-serif;
  background-color: #fafafa;
  color: #444;
  text-align: center;
}

/*
### HEADER STYLES ###
*/
header {
  background-color: #444;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
  transform: skew(0deg, 4deg) translateY(-90px);
}

header h1 {
  color: #fafafa;
  font-size: 4rem;
  padding-bottom: 110px;
  transform: skew(0deg, -4deg) translateY(96px);
}

/*
### COMPUTER REUSLTS STYLES ###
*/
#content {
  max-width: 600px;
  margin: auto;
  transform: translateY(-50px);
}

#comp-result img {
  width: 60px;
  margin-top: 12px;
}

#intro {
  font-size: 2.2rem;
  margin: 40px 0;
}

/*
### PLAYER BUTTONS STYLES ###
*/
#player-buttons {
  background-color: #baf580;
  border-radius: 15px;
  display: flex;
  justify-content: space-around;
  padding: 20px 0;
  margin: 20px;
}

.btn {
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  width: 60px;
  margin-bottom: 12px;
}

.btn-name {
  font-size: 1.6rem;
  font-weight: bold;
}

#reset-btn {
  background-color: #fafafa;
  color: #444;
  font-size: 2rem;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
  border: none;
  border-radius: 10px;
  cursor: pointer;
  padding: 6px 20px;
}

/*
### PLAYER SCORES STYLES ###
*/
#scores {
  margin: 40px 25px 0 25px;
}

#scores p {
  font-size: 1.6rem;
  display: inline;
}

.name {
  font-weight: bold;
}

#player-score {
  float: left;
}

#comp-score {
  float: right;
}

